--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
+    "less": "^3.10.3",
     "mini-css-extract-plugin": "0.5.0",
     "moment": "^2.24.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
